@@ -3,6 +3,7 @@
 *Ver3.21 : 2019/xx/xx
 
 -起動時のパス解析を更新しました。
+－【Windows/httpd】adiary.conf.cgiが存在しない時、自動生成するようにしました。
 
 *Ver3.20 : 2018/12/27
 
